# cosmology.compat.camb

./: .pre-commit-config.yaml  pyproject.toml
.github/: dependabot.yml
src/cosmology/compat/camb/: __init__.py  _core.py  _standard.py
tests/camb/: test_core.py  test_standard.py
